--- a/example.env
+++ b/example.env
@@ -13,10 +13,10 @@ DELAY_BETWEEN_TASKS=[10, 15]
 TIME_SLEEP_BETWEEN_CYCLES=1440
 
 # --- Task Switch (true/false) ---
-RUN_BRIDGE=false
-RUN_DELEGATE=false
-RUN_DEPLOYMENT=false
-RUN_SEND_NATIVE=false
+RUN_BRIDGE=true
+RUN_DELEGATE=true
+RUN_DEPLOYMENT=true
+RUN_SEND_NATIVE=true
 
 # --- Bridge Settings ---
 BRIDGE_COUNT=[1, 2]
@@ -35,7 +35,7 @@ SEND_COUNT=[1, 2]
 SEND_AMOUNT=[0.0001, 0.0005]
 
 # Select one of the following services: 2captcha, anticaptcha, capmonster
-RUN_FAUCET=false
+RUN_FAUCET=true
 CAPTCHA_SERVICE="CHOOSE_YOUR_SERVICES"
 
 # Enter the API Key according to the selected service
